--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <body>
     <header>
         <h1>Benvenuti nel Giornalino della 4D Informatica</h1>
-        <p>Il nostro spazio per parlare dei sistemi opertivi, programmazione e altro.</p>
+        <p>Il nostro spazio per parlare dei sistemi opertivi e programmazione.</p>
     </header>
 
     <div class="container">
